test/process/error/dune.inc
; dune file generated by '%{bin:bopkit} process fmt gen-dune' -- do not edit.

(rule
 (with-stdout-to
  arity-error.bpp.pp.output
  (bash "%{bin:bopkit} process fmt file %{dep:arity-error.bpp}")))

(rule
 (alias fmt)
 (action
  (diff arity-error.bpp arity-error.bpp.pp.output)))

(rule
 (with-stdout-to
  unassigned-output.bpp.pp.output
  (bash "%{bin:bopkit} process fmt file %{dep:unassigned-output.bpp}")))

(rule
 (alias fmt)
 (action
  (diff unassigned-output.bpp unassigned-output.bpp.pp.output)))

(rule
 (with-stdout-to
  unassigned-var.bpp.pp.output
  (bash "%{bin:bopkit} process fmt file %{dep:unassigned-var.bpp}")))

(rule
 (alias fmt)
 (action
  (diff unassigned-var.bpp unassigned-var.bpp.pp.output)))

(rule
 (with-stdout-to
  undefined-operator.bpp.pp.output
  (bash "%{bin:bopkit} process fmt file %{dep:undefined-operator.bpp}")))

(rule
 (alias fmt)
 (action
  (diff undefined-operator.bpp undefined-operator.bpp.pp.output)))
